--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "@types/split.js": "^1.4.0",
+    "@types/throttle-debounce": "^2.1.0",
     "core-js": "^3.6.4",
     "monaco-editor": "^0.20.0",
     "monaco-editor-webpack-plugin": "^1.9.0",
     "split.js": "^1.5.11",
+    "throttle-debounce": "^2.1.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.1"
